--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<div id="ad_container" style="padding: 0px"></div>
-<script type="text/javascript">
-
-
-</script>
-
-TEST PAGE
+{ test : "testing" }
